# plugin-sdk-to-cpp

./: .gitignore  CSVFunctionExtract.py  CSVStaticVariableExtract.py  JSONStructExtract.py  LICENSE  README.md  install.bat  main.py  pyproject.toml  requirements.txt  run.txt
src/: ArgsExtract.py  CSVFunctionExtract.py  CSVStaticVariableExtract.py  JSONStructExtract.py  PerClassProcessor.py  Util.py  args.py  cls.py  main.py  type_replacement.py
src/extractors/: Extractor.py  Util.py
src/extractors/fakepdb/: Extractor.py
src/extractors/pluginsdk/: Extractor.py  FunctionExtract.py
src/models/: CallingConvention.py  Function.py  Variable.py  type.py
src/templates/: cpp.jinja2  function_def.jinja2  h.jinja2  header.jinja2  print_if.jinja2  source.jinja2
src/templates/header/: constructror.jinja2  destructror.jinja2  member_vars.jinja2  static_inline_vars.jinja2  static_vars.jinja2
src/templates/source/: constructror.jinja2  destructror.jinja2  inject_hooks.jinja2  static_vars.jinja2
templates/: h.jinja2
