[tool.poetry]
name = "plugin-sdk-to-cpp"
version = "0.1.0"
description = "Convert code from PluginSDK to C++ stubs"
authors = ["Pirulax <patrikjankovics7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
